<resources>
    <string name="app_name">饥荒猪人盒子</string>
    <string name="money">捐赠</string>
    <string name="help">Help</string>
    <string name="download">下载</string>
    <string name="game">游戏</string>
    <string name="name">name:</string>
    <string name="author">author:</string>
    <string name="description">description:</string>
    <string name="uninstall">卸载</string>
    <string name="mod_icon">Mod Icon</string>
    <string name="NullItem">没有找到该游戏中已安装的mod
        \n你可以通过右下角的添加按钮添加mod到等待安装队列
        \n再点击保存按钮执行计划
        \n请确认游戏安装包破解了数据包验证
        \n否则改动数据包会导致游戏程序不识别
        \n如果未安装饥荒mod框架
        \n添加mod将无效</string>
    <string name="FinishNullItem">没有找到已加载的mod
        \n你可以通过右下角的添加按钮打开文件管理器
        \n选择mod压缩包或者modinfo.lua文件来加载
    </string>
    <string name="todo">TODO</string>
    <string name="SplashText">一个垃圾透顶的mod管理工具</string>
</resources>
